Update idea.vmoptions